# kucoin_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  error.rs  lib.rs  market.rs  trade.rs  user.rs  utils.rs  websocket.rs
src/kucoin/: client.rs  error.rs  margin.rs  market.rs  mod.rs  trade.rs  user.rs  utils.rs  websocket.rs
src/kucoin/model/: margin.rs  market.rs  mod.rs  trade.rs  user.rs  websocket.rs
src/model/: margin.rs  mod.rs  trade.rs  websocket.rs
