[package]
authors = ["Eric Abrahams <eric@halgo.ca>"]
description = "Rust async library for the Kucoin API"
documentation = "https://docs.rs/crate/kucoin_rs"
edition = "2018"
homepage = "https://github.com/esvwdev/kucoin_rs"
keywords = ["kucoin", "cyptocurrency", "trading", "algotrading", "async"]
license = "MIT"
name = "kucoin_rs"
readme = "README.md"
repository = "https://github.com/escwdev/kucoin_rs"
version = "0.4.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
futures = "0.3.9"
hmac = "0.12"
pin-project = "1.0.5"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
sha2 = "0.10"
streamunordered = "0.5"
reqwest = { version = "0.11.1", features = ["json", "rustls-tls"] }
thiserror = "1.0"
tokio = { version = "1.0.1", features = ["full"] }
tokio-native-tls = "0.3.0"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tungstenite = "0.17"
url = "2.1.1"
