[package]
authors = ["Eric Abrahams <eric@halgo.ca>", "Sho Kaneko <kanekoshoyu@gmail.com>"]
description = "Async Kucoin API"
documentation = "https://docs.rs/crate/kucoin_api"
edition = "2018"
homepage = "https://github.com/kanekoshoyu/kucoin_api"
keywords = ["kucoin", "cyptocurrency", "trading", "algotrading", "async"]
license = "MIT"
name = "kucoin_api"
readme = "README.md"
repository = "https://github.com/kanekoshoyu/kucoin_api"
version = "0.4.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.0"
failure = "0.1.7"
futures = "0.3.9"
hmac = "0.7.1"
pin-project = "1.0.5"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
sha2 = "0.8.1"
streamunordered = "0.5"
reqwest = { version = "0.11.1", features = ["json", "rustls-tls"] }
tokio = { version = "1.27.0", features = ["full"]}
tokio-native-tls = "0.3.0"
tokio-tungstenite = { version = "0.13.0", features = ["tls"] }
tungstenite = "0.13.0"
url = "2.1.1"